# webtest-mcp-server

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  README.md  install.ps1  install.sh  mcp-config.json  pyproject.toml  uninstall.ps1  uninstall.sh
.claude/skills/case-executor/: SKILL.md
.claude/skills/case-generator/: SKILL.md
.claude/skills/web-test-runner/: SKILL.md
.cursor/skills/case-generator/: SKILL.md
.cursor/skills/web-test-runner/: SKILL.md
docs/: GETTING_STARTED.md  Phase1-Windows#U6d4b#U8bd5#U6307#U5357.md  Phase1-Windows测试指南.md  Phase2-页面爬取.md  TESTING.md
projects/demo/: PLAYBOOK.md  cases.xlsx  login_cases.xlsx  project.yaml  selectors.yaml  smoke_cases.xlsx
projects/huudi/: Huudi_TestCases_20260318_083444.xls  cases_temp.json  create_account_cases.xlsx  huudi_Simulator_20260317_084112.xls  huudi_cases_v1.xlsx  huudi_specs_EN.md  project.yaml  project.yaml.example  selectors.yaml
scripts/: build-dist.sh  clean.sh  create_demo_excel.py  docker-entrypoint.sh  extract_elements.py  list_cases.py  merge_mcp_config.py  remove_mcp_config.py  run_demo.py  run_smoke.py  run_suite.py  test_save_results.py
src/webtest_mcp/: __init__.py  config.py  crawler.py  loader.py  resolver.py  runner.py  server.py  session.py  utils.py  validator.py
tests/: test_config.py  test_crawler.py  test_loader.py  test_runner.py  test_server.py  test_utils.py  test_validator.py
