[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webtest-mcp-server"
version = "0.1.0"
description = "MCP Server - 读取 Excel 自然语言用例，供 AI + playwright-mcp 执行"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = []
keywords = ["webtest", "mcp", "playwright", "automation", "excel", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
xls = [
    "xlrd>=2.0.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
webtest-mcp = "webtest_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/webtest_mcp"]

[tool.hatch.build.targets.sdist]
packages = ["src/webtest_mcp"]
exclude = [
  "**/__pycache__",
  "**/__pycache__/**",
  "**/.pytest_cache",
  "**/.pytest_cache/**",
  "**/artifacts",
  "**/artifacts/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
